fichier de properties server et client