@@ -25,7 +25,63 @@
 			<groupId>fr.esiag.mezzodijava</groupId>
 			<artifactId>mezzo-commons</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>fr.esiag.mezzodijava</groupId>
+			<artifactId>mezzo-cosevent-server</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+
+<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>compile</id>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <target>
+                <property name="compile_classpath" refid="maven.compile.classpath"/>
+                <property name="runtime_classpath" refid="maven.runtime.classpath"/>
+                <property name="test_classpath" refid="maven.test.classpath"/>
+                <property name="plugin_classpath" refid="maven.plugin.classpath"/>
+
+                <echo message="compile classpath: ${compile_classpath}"/>
+                <echo message="runtime classpath: ${runtime_classpath}"/>
+                <echo message="test classpath:    ${test_classpath}"/>
+                <echo message="plugin classpath:  ${plugin_classpath}"/>
+                <exec executable="java" spawn="true">
+       				<arg line="-Djava.endorsed.dirs=${env.JACORB_HOME}/lib -classpath ${test_classpath}  fr.esiag.mezzodijava.mezzo.coseventserver.main.CosEventServer "/>
+     </exec>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.7.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<argLine>-Djava.endorsed.dirs=${env.JACORB_HOME}/lib</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 	<profiles>
 		<profile>
 			<id>shade</id>
